{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 23,
  "lineage": "6cbc75d5-06a9-34c5-88df-03004f8b4116",
  "resources": [
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:967054606332:instance/i-0dcf66a35ca50ee16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcf66a35ca50ee16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07595be4019c846d3"
              }
            ],
            "primary_network_interface_id": "eni-07595be4019c846d3",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_ip": "18.213.111.112",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085d2670ec283887e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7df25e3f294620a",
            "tags": {
              "Name": "My-Server"
            },
            "tags_all": {
              "Name": "My-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5b906391e8c27c6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967054606332",
            "id": "i-0dcf66a35ca50ee16",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Ec2_infrastructure.aws_security_group.EC2SG",
            "module.Ec2_infrastructure.aws_subnet.EC2_subnet",
            "module.Ec2_infrastructure.aws_vpc.EC2_VPC",
            "module.Ec2_infrastructure.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "EC2_IGW",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967054606332:internet-gateway/igw-001b7f0675bef8599",
            "id": "igw-001b7f0675bef8599",
            "owner_id": "967054606332",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC_IGW"
            },
            "tags_all": {
              "Name": "VPC_IGW"
            },
            "vpc_id": "vpc-0b7d806def4a46cab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Ec2_infrastructure.aws_vpc.EC2_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967054606332:route-table/rtb-0609b144d27b0d8a7",
            "id": "rtb-0609b144d27b0d8a7",
            "owner_id": "967054606332",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001b7f0675bef8599",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7d806def4a46cab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967054606332",
            "id": "rtb-0609b144d27b0d8a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Ec2_infrastructure.aws_internet_gateway.EC2_IGW",
            "module.Ec2_infrastructure.aws_vpc.EC2_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-asso",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc28bb3b44d77c0",
            "region": "us-east-1",
            "route_table_id": "rtb-0609b144d27b0d8a7",
            "subnet_id": "subnet-0a7df25e3f294620a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Ec2_infrastructure.aws_internet_gateway.EC2_IGW",
            "module.Ec2_infrastructure.aws_route_table.public_route",
            "module.Ec2_infrastructure.aws_subnet.EC2_subnet",
            "module.Ec2_infrastructure.aws_vpc.EC2_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2SG",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967054606332:security-group/sg-0b5b906391e8c27c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5b906391e8c27c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EC2SG",
            "name_prefix": "",
            "owner_id": "967054606332",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2SG"
            },
            "tags_all": {
              "Name": "EC2SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7d806def4a46cab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967054606332",
            "id": "sg-0b5b906391e8c27c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Ec2_infrastructure.aws_vpc.EC2_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EC2_subnet",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967054606332:subnet/subnet-0a7df25e3f294620a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7df25e3f294620a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "967054606332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EC2-subnet"
            },
            "tags_all": {
              "Name": "EC2-subnet"
            },
            "vpc_id": "vpc-0b7d806def4a46cab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967054606332",
            "id": "subnet-0a7df25e3f294620a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Ec2_infrastructure.aws_vpc.EC2_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2_infrastructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EC2_VPC",
      "provider": "module.Ec2_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967054606332:vpc/vpc-0b7d806def4a46cab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056cd867c54e11aef",
            "default_route_table_id": "rtb-0c6acf7db6fca15ce",
            "default_security_group_id": "sg-09eb47e8243e00169",
            "dhcp_options_id": "dopt-0ace94393604fd1d6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7d806def4a46cab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6acf7db6fca15ce",
            "owner_id": "967054606332",
            "region": "us-east-1",
            "tags": {
              "Name": "EC2_VPC"
            },
            "tags_all": {
              "Name": "EC2_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967054606332",
            "id": "vpc-0b7d806def4a46cab",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}